refact: added copy and request DTOs & updated patch and delete endpoints to use the payload dto